# web-sys-issue-2272

./: .gitignore  Cargo.toml  README.md  index.html  worker.js
src/: lib.rs
