[package]
name = "web-sys-issue-2272"
version = "0.1.0"
authors = ["David H <cpif@handysoftware.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
]

